Bug 264757 - Autocompletion anything but "auto"
Summary: Autocompletion anything but "auto"
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: VHI critical
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 264480 268069 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-29 16:51 UTC by Ireyon
Modified: 2011-05-08 13:28 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ireyon 2011-01-29 16:51:49 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

In the current version of Kate (which is 3.6.0, shipped along with KDE SC 4.6, by the way NOT listet in the version drop down list here), autocompletion doesn't work unless I press ctrl+space. In previous Kate versions it worked just fine, I could type a few letters and the list appeared. Not in the current version. I think I have all the autocompletion options enabled (or has something changed since the previous release which I have not found yet?) and set the minimum letters to 3.
Quite annoying, I used this for every longer variable/function name in my code.

Reproducible: Always

Steps to Reproduce:
Type some code and try yourself.

Actual Results:  
Nothing, that's the problem.

Expected Results:  
A list of matching words.

Tested on productive Arch Linux system and on a Kubuntu 10.10 VM, both upgraded from KDE 4.5
Comment 1 Milian Wolff 2011-01-29 17:28:57 UTC
cannot reproduce with kate from current git - Christoph - do SVN and git diverge?
Comment 2 Ireyon 2011-01-29 19:37:29 UTC
Hm. I have the problem even when starting with an entirely empty kate config. Always have to press ctrl+space to make the list show up. Also, disabling all (potentially conflicting) plugins didn't change anything.

Or is it even a feature?
Comment 3 Milian Wolff 2011-02-02 21:47:03 UTC
major regression, just got it shown by a friend (archlinux user) in kile - it's auto completion is completely broken.
Comment 4 Michel Ludwig 2011-02-02 22:48:37 UTC
(In reply to comment #3)
> major regression, just got it shown by a friend (archlinux user) in kile - it's
> auto completion is completely broken.

Regarding Kile, please make sure that it was compiled against KDE 4.6 (or 4.5). There are currently two versions of code completion implemented in Kile: one that works with SmartRanges (< 4.5), and one with MovingRanges (>= 4.5)
Comment 5 Ireyon 2011-02-03 17:27:26 UTC
And regarding Kate, it seems to have to do with the external tools-plugin. I removed *all* config files from Kate, this time including the "plugins" directory, and hey, it worked. Once enabled: Not working anymore.
Comment 6 Piotr Keplicz 2011-02-04 18:50:54 UTC
*** Bug 264480 has been marked as a duplicate of this bug. ***
Comment 7 Jon Nelson 2011-02-16 16:23:41 UTC
Please see bug 265730 for some issues regarding the external tools. 3 of the 4 shipped are broken.


I am also having code-completion issues, but I tried emptying the configuration in /usr/share/kde4/apps/kate/externaltools without luck.
Comment 8 Ireyon 2011-02-16 19:19:16 UTC
Today I randomly tried to set the minimum word length to 0 and see - it works fine on all of my systems. It's just slightly annoying that the menu shows up after anything you type, except for whitespace. But - better than nothing.
Comment 9 contact 2011-03-10 16:13:52 UTC
I have the same problem here (with Archlinux too), and it also works when I set the minimum word length to 0 or 1.
Comment 10 Tilman Keskinöz 2011-03-16 10:24:07 UTC
*** Bug 268069 has been marked as a duplicate of this bug. ***
Comment 11 themroc 2011-05-07 20:55:23 UTC
Same problem in Kubuntu x64, natty (11.04), kate 3.6.2, kde 4.6.2.

And it also works when I set the minimum word length to 0 or 1.
Comment 12 themroc 2011-05-07 21:42:21 UTC
I have deactivate external tools and removed all config files from kate and restart: autocompletion doesn't pop up automatic!

Only setting the minimum word length to 0 or make it work again.
Comment 13 Dominik Haumann 2011-05-08 11:41:18 UTC
Git commit 4fa660abce6d3dd101b77f2af8bfb70230cf7d91 by Dominik Haumann.
Committed on 08/05/2011 at 11:50.
Pushed by dhaumann into branch 'master'.

unbreak 'auto' in word completion

also, ctrl+space now shows the completion list again if you are in the middle of a word.
Please test by compiling it yourself: http://kate-editor.org/get-it/
Then we can get this into the 4.6 line.

BUG: 264757

M  +22   -19   part/completion/katewordcompletion.cpp     
M  +2    -0    part/completion/katewordcompletion.h     

http://commits.kde.org/kate/4fa660abce6d3dd101b77f2af8bfb70230cf7d91
Comment 14 themroc 2011-05-08 13:28:09 UTC
I have test "http://kate-editor.org/get-it/" on Kubuntu 11.04 (natty) amd64 and now the autocompletion works again. The autocompletion popup now appears automatic setting the minimum letters to 3 or something else.

So, for me the problem is solved with the git version.