unbreak 'auto' in word completion

also, ctrl+space now shows the completion list again if you are in the middle of a word.
Please test by compiling it yourself: http://kate-editor.org/get-it/
Then we can get this into the 4.6 line.

BUG: 264757